# agent_rh

./: .gitignore  .vercelignore  README.md  agent.py  config.py  dev.sh  front.patch  llm.py  main.py  monitoring.py  pyproject.toml  requirements.txt
calendarAPI/: __init__.py  cli.py  client.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: chat-client.jsx  globals.css  layout.jsx  login-client.jsx  page.jsx
frontend/app/api/auth/login/: route.js
frontend/app/api/auth/logout/: route.js
frontend/app/api/chat/: route.js
frontend/app/chat/: page.jsx
frontend/app/login/: page.jsx
frontend/lib/: auth-client.js  auth-server.js  auth.js
jibble/: demande_conge.py  jibble_connect.py
llm-as-judge/: eval_rag_qa.py  rag_qa_results.csv  rag_test_dataset.csv
memory/: __init__.py  store.py
rag/: __init__.py  rag_pipeline.py  rag_qa.py
rag/vector_db/: chroma.sqlite3
tools/: __init__.py  database.py  search.py
