[project]
name = "agent-rh"
version = "0.1.0"
description = "Agent RH de base en structure aplatie"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "mboumaiz" },
]
dependencies = [
    "deepagents>=0.6.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "langchain>=1.3.1",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
    "msal>=1.33.0",
    "msal-extensions>=1.2.0",
    "openai>=1.0.0",
    "pypdf>=5.0.0",
    "requests>=2.32.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
agent-rh = "main:main"
